Почти сделал 4 дз

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="venus">Венера</string>
     <string name="mars">Марс</string>
     <string name="earth">Земля</string>
+    <string name="song">All i need is a love tonight</string>
 
 </resources>
