--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,9 @@
     <string name="animation">Анимация</string>
     <string name="change_focus">Изменить размер</string>
     <string name="second_screen">Второй экран</string>
+    <string name="list">Список</string>
+    <string name="write_new_deal">Впишите новое дело</string>
+    <string name="title">Заголовок</string>
+    <string name="dealTitle">Дела</string>
 
 </resources>
